fix crash + fix booking block on mobile

--- a/src/components/additional/BookingBlock/BookingBlock.module.scss
+++ b/src/components/additional/BookingBlock/BookingBlock.module.scss
@@ -19,7 +19,7 @@
     width: 100%;
     background-color: white;
     border-radius: 0;
-    margin: 0 0 50px;
+    margin: 0 0 15px;
     box-shadow: -7.182px 19.734px 47px 0px rgba(23, 23, 23, 0.13);
   }
 }
